--- a/less/buttons.less
+++ b/less/buttons.less
@@ -22,8 +22,8 @@
 .btn {
   display: inline-block;
   .ie7-inline-block();
-  padding: 0 14px;
-  margin-bottom: @baseLineHeight; // For input.btn
+  padding: 0 @baseLineWidth;
+  margin-bottom: @baseLineHeight;
   font-size: @baseFontSize;
   line-height: @baseLineHeight;
   text-align: center;
