--- a/less/forms.less
+++ b/less/forms.less
@@ -467,8 +467,6 @@ select:focus:invalid {
     .border-radius(0);
   }
   .active {
-    background-color: lighten(@green, 30);
-    border-color: @green;
   }
 }
 
