--- a/less/navs.less
+++ b/less/navs.less
@@ -54,14 +54,14 @@
 // --------
 
 .nav-list {
-  padding: 0px 14px;
+  padding: 0px @baseLineWidth;
   margin-bottom: 0;
   .box-shadow(~"8px 10px 0 0 rgb(0,0,0)");
 }
 .nav-list > li > a,
 .nav-list .nav-header {
-  margin-left:  -14px;
-  margin-right: -14px;
+  margin-left:  -@baseLineWidth;
+  margin-right: -@baseLineWidth;
 }
 .nav-list > li > a {
   padding: 0 8px;
